<resources>
    <string name="app_name">Myexchangefood</string>
    <string name="discover_restaurant_n_arround_you">Browse Exchange Restaurants\nAround you</string>
    <string name="next">Next</string>
    <string name="choose_and_order">Choose and Order</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_started">Get Started</string>
    <string name="address">Address</string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="mycart">My Cart</string>
    <string name="profile">Profile</string>
    <string name="your_location">Your Location</string>
    <string name="warning_no_internet">No internet connection. Please Check your internet connection</string>
    <string name="view_cart">View Cart</string>
    <string name="choose_a_size">Choose A Size</string>
    <string name="add_item">Add Item</string>
    <string name="_1">1</string>
    <string name="expires">Expiry</string>
    <string name="xx_xxxx">XX/XXXX</string>
    <string name="your_card_number">Your Card Number</string>
    <string name="cardholder">Card holder</string>
    <string name="cardholder_name">Card Holder Name</string>
    <string name="expiration_date">Expiry Date</string>
    <string name="card_cvv">CVV</string>
    <string name="warning_empty_card_number">Empty Card Number.</string>
    <string name="warning_empty_card_expiry">Empty Card Expiry</string>
    <string name="warning_empty_card_holder">Empty Card Holder Name</string>
    <string name="warning_empty_card_cvv">Empty Card CVV</string>
    <string name="warning_short_cvv">Warning Short CVV</string>
    <string name="warning_invalid_payment_card">Invalid Card Details</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="warning_empty_city">Empty City Name</string>
    <string name="warning_empty_state">Empty State Name</string>
    <string name="warning_empty_address">Empty Address.</string>
    <string name="no_address_found_n_please_add_new_address">No address found.  Please add new Address.</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="please_wait_while_your_nmenu_is_loading">Menu Loading\nPlease wait... </string>
    <string name="no_delivery">No Delivery</string>
    <string name="delivery">On-base Delivery</string>
    <string name="delivery_txt">Delivery</string>
    <string name="off_delivery">Off-base Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="items_total">Items Total</string>
    <string name="_0">₹ 0</string>
    <string name="add_tip_for_your_rider">Add a tip for your rider</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="rs_30_off">(Rs. 30 OFF)</string>
    <string name="congratulations_coupon_applied_successfully">Congratulations, Coupon Applied Successfully !!</string>
    <string name="tax_applied">Tax Applied</string>
    <string name="tip_added">Tip Added</string>
    <string name="coupon_discount">Coupon Applied</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="restaurant_contribution">Restaurant Contribution</string>
    <string name="choose_your_organization">Choose your Organization</string>
    <string name="payment_method">Payment Method</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="paytm">PAYTM</string>
    <string name="net_banking">Net Banking</string>
    <string name="cash">Cash</string>
    <string name="delivery_in_30_min">Delivery in 30 min</string>
    <string name="total">Total</string>
    <string name="add_something_to_make_me_happy">Add Something to make me happy :)</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="submit_order">Submit Order</string>
    <string name="__0">0</string>
    <string name="addons">Addons -</string>
    <string name="title">Title</string>
    <string name="okay">Okay</string>
    <string name="_xxxx">XXXX</string>
    <string name="warning_empty_zip">Empty ZIP.</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="program">Program</string>
    <string name="logout">Logout</string>
    <string name="login_to_see_profile">Login to See Profile.</string>
    <string name="reward_point">Reward Point</string>
    <string name="claim_point">Claim point</string>
    <string name="money_saved">Money Saved</string>
    <string name="restaurant_unlocked">Restaurant Unlocked</string>
    <string name="manage_location">Manage Location</string>
    <string name="industrial_focal_point_mohali">Industrial Focal Point, Mohali</string>
    <string name="change">Change</string>
    <string name="save_cards">Save Cards</string>
    <string name="signin">SignIn</string>
    <string name="continue_with_facebook">Login with Facebook</string>
    <string name="continue_with_google">Login with Google</string>
    <string name="signin_text">Sign In</string>
    <string name="sign">Sign</string>
    <string name="in">In</string>
    <string name="please_login_to_continous">Please login to continuous</string>
    <string name="find_food_you_love_from_local_restaurants_nand_help_your_community">Find food you love from local restaurants and help your community</string>
    <string name="best_food_for_you">Best Food For You</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="star">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook_app_id">1433089710234334</string>
    <string name="invalid_email_id">Enter valid email id</string>
    <string name="invalid_email">Enter valid email id or Mobile no.</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">Enter Mobile No.</string>
    <string name="googleLogin">Google Login</string>
    <string name="facebookLogin">Facebook Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="forg">Forg</string>
    <string name="let_s_change_your_new_password_and_login">Let’s change your new password and login</string>
    <string name="we_just_need_your_registered_email_nid_mobile_number_to_send_you_otp_nfor_reset_password">
        We just need your registered Email ID to send you OTP for reset password
    </string>
    <string name="ot_password">ot Password</string>
    <string name="enter_mobile_number_email">Enter Email ID</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">RESEND</string>
    <string name="fy_otp">fy OTP</string>
    <string name="veri">Veri</string>
    <string name="verification_code_send_to_your_nemail_address">Verification code send to your\nEmail address</string>
    <string name="et_password">et Password</string>
    <string name="res">Res</string>
    <string name="reset_password">Reset Password</string>
    <string name="cre">Cre</string>
    <string name="ate_account">ate Account</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="invalid_name">Enter valid Name</string>
    <string name="invalid_email_test">Enter valid email id</string>
    <string name="invalid_mobile">Enter valid mobile no.</string>
    <string name="invalid_password">Enter valid password</string>
    <string name="loading_text">Please Wait..</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="available_coupons">Available Coupons</string>
    <string name="no_coupon_available_currently">No Coupon Available Currently.</string>
    <string name="available_discount">Available Discount</string>
    <string name="no_discount_available_currently">No Discount Available Currently.</string>
    <string name="apply">Apply</string>
    <string name="no_address_found">No Address Selected</string>
    <string name="cvv">CVV</string>
    <string name="today_asap">Today, ASAP</string>
    <string name="order_schedule_for">Order Schedule For :</string>
    <string name="schedule_my_food">Schedule My Food</string>
    <string name="choose_country">Choose Area</string>
    <string name="looks_like_you_haven_t_made_any_order_yet">Looks Like you haven\'t made any order yet!</string>
    <string name="no_order_found">No order found</string>
    <string name="sav">Sav</string>
    <string name="ed_address">ed Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="search_place">Search place</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="delivery_no_available">Delivery is not available.</string>
    <string name="delivery_in">Delivery in </string>
    <string name="pick_in">Pickup in</string>
    <string name="choose_payment_option">Please choose payment method.</string>
    <string name="choose_other_payment_option">The Zero(0) amount order can\'t be placed with Credit/Debit card or MILITARY STAR@ Card.\nPlease Choose other option for payment.\n</string>
    <string name="maker_of_car">Maker of Car</string>
    <string name="model_of_car">Model of Car</string>
    <string name="color_of_car">Color of Car</string>
    <string name="msg_later">Restaurant is not accepting current orders.But you can place the late orders.</string>
    <string name="msg_future">Restaurant is not accepting current orders.But you can place the future orders.</string>
    <string name="totel_order">Total Orders</string>
    <string name="current_base_location">Current Base Location ✏️</string>
    <string name="share_with">Share with</string>
    <string name="friend_and_family"><![CDATA[Friends &amp; Family]]></string>
    <string name="miltry_star_card">MILITARY STAR® Card</string>
    <string name="editAdress">Edit Address</string>
    <string name="add_address">Add Address</string>
    <string name="invalid_location">This field is required</string>
    <string name="invalid_min_char_password">Nice try but you need a minimum of 8 characters.</string>
    <string name="content">Please enter your existing online ordering password to associate this Social login with the existing online ordering account.</string>
    <string name="enter_password">Enter Password</string>
    <string name="order_number">Order Number</string>
    <string name="date">Date</string>
    <string name="item_total">Item Total</string>
    <string name="any_restaurant_request_we_will_try_our_best_to_convey_it">Any restaurant request? We will try our best to convey it</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <string name="address_collem">Address :</string>
    <string name="pickup_col">Pickup :</string>
    <string name="tel_colom">Telephone :</string>
    <string name="delivery_col">Delivery :</string>
    <string name="payment_acceptable">Payments Accepted</string>
    <string name="service_acceptable">Service Available</string>
    <string name="available">Available</string>
    <string name="min_order">Min Order</string>
    <string name="min_charge">Min Charge</string>
    <string name="name">Name</string>
    <string name="ready_in">Ready In</string>
    <string name="apply_discount">Discount Applied</string>
    <string name="not_available">Not Available</string>
    <string name="varfy_reset"><![CDATA[Varify & Reset]]></string>
    <string name="chooseyourlocation">Choose Your Location</string>
</resources>