<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="chooseorderViewModel"
            type="com.exchange.user.module.choose_order_module.ChooseOrderViewModel" />
    </data>

    <LinearLayout
        android:background="@color/white_color"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dip">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="0dip">
            <!--                android:layoutAnimation="@anim/layout_animation_fall_down"-->
            <LinearLayout
                android:layoutAnimation="@anim/layout_animation_fall_down"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layoutAnimation="@anim/layout_animation_slide_in_left"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dip">


                <TextView
                    android:textStyle="bold"
                    android:layout_margin="@dimen/margin_1"
                    android:fontFamily="@font/redhatdisplay_regular"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/xxlarge_text_size"
                    android:textColor="@color/black_color_light"
                    android:text="@string/choose_and_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:visibility="gone"
                    android:foregroundTint="@color/colorPrimary"
                    android:buttonTint="@color/colorPrimary"
                    android:id="@+id/checkTermsandcondition"
                    android:fontFamily="@font/redhatdisplay_regular"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="#968B9F"
                    android:text="@string/i_agree_to_the_terms_and_conditions"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:visibility="gone"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:elevation="@dimen/margin_1"
                        android:onClick="@{()->chooseorderViewModel.termsCondition()}"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/redhatdisplay_regular"
                        android:text="@string/terms_and_conditions"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_margin="@dimen/margin_04"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:elevation="@dimen/margin_1"
                        android:onClick="@{()->chooseorderViewModel.privacyPolicy()}"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/redhatdisplay_regular"
                        android:text="@string/privacy_policy"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:onClick="@{()->chooseorderViewModel.getStarted()}"
                    android:textColor="@color/white_color"
                    android:elevation="@dimen/margin_5"
                    android:textStyle="bold"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/get_started"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/button_shape_gradian"
                    android:layout_margin="@dimen/margin_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</layout>