<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="changeaddressViewModel"
            type="com.exchange.user.module.change_address_module.ChangeAddressViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="@{(v)->changeaddressViewModel.back()}"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginStart="@dimen/margin_3"
                    android:src="@drawable/ic_back_arrow_small"
                    android:layout_width="@dimen/margin_7"
                    android:layout_height="@dimen/margin_7">

                </androidx.appcompat.widget.AppCompatImageView>

                <LinearLayout
                    android:layout_marginTop="@dimen/margin_2"
                    android:layout_marginRight="@dimen/margin_7"
                    android:layout_marginLeft="@dimen/margin_7"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:paddingBottom="@dimen/margin_2"
                            android:background="@drawable/underline"
                            android:fontFamily="@font/redhatdisplay_regular"
                            android:textSize="@dimen/xxlarge_text_size"
                            android:text="@string/sav"
                            android:textColor="@color/white_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView

                            android:paddingBottom="@dimen/margin_2"

                            android:fontFamily="@font/redhatdisplay_regular"
                            android:textSize="@dimen/xxlarge_text_size"
                            android:text="@string/ed_address"
                            android:textColor="@color/white_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:id="@+id/addressrecycle"
                    android:layout_marginTop="@dimen/margin_1"
                    android:layout_marginLeft="@dimen/margin_1"
                    android:layout_marginRight="@dimen/margin_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/message"
                    android:visibility="gone"
                    android:gravity="center"
                    android:textSize="@dimen/normal_text_size"
                    android:fontFamily="@font/redhatdisplay_regular"
                    android:textColor="@color/white_color"
                    android:text="@string/no_address_found_n_please_add_new_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/navigation_width"/>


                <LinearLayout
                    android:layout_margin="@dimen/margin_2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:textColor="@color/colorPrimary"
                        android:onClick="@{(v)->changeaddressViewModel.addNewAddrss()}"
                        android:drawablePadding="@dimen/margin_1"
                        android:drawableStart="@drawable/ic_add_address"
                        android:paddingRight="@dimen/margin_3"
                        android:paddingLeft="@dimen/margin_3"
                        android:background="@drawable/button_shape_white"
                        android:fontFamily="@font/redhatdisplay_regular"
                        android:text="@string/add_new_address"
                        android:elevation="@dimen/margin_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </androidx.appcompat.widget.AppCompatButton>


                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>



</layout>